# Ray-Tracing

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  Renderer.cpp  Renderer.h  render.cpp  renderMain  renderMain.cpp  runTimeScript.sh
Create_Images/Gradient_Color/: gradientColor
Create_Images/Solid_Color/: solidColor  solidColor.cpp
Objects/: Light.h  Plane.h  Sphere.h
Ray Tracing/: Debug.h  Light.h  Material.h  Model.h  Object.h  Plane.h  Ray Tracing.sln  Ray Tracing.vcxproj  Ray Tracing.vcxproj.filters  Rendered Image.ppm  Renderer.h  Sphere.h  Vector3.h  Vector3f.h  main.cpp
Utility/: Cubemap.cpp  Rendering_Utilities.h  Vector3.h
include/: Cubemap.h  Material.h  Renderer.h  Vector3.h
include/Objects/: Light.h  Object.h  Plane.h  Sphere.h
src/Create_Images/Gradient_Color/: gradientColor.cpp
src/Create_Images/Solid_Color/: solidColor.cpp
src/Cubemap/: Cubemap.cpp
src/Renderer/: Renderer.cpp
test/: CMakeLists.txt  test_Vector3.cpp
